# research_rust_ecosystem

./: .gitignore  readme.md  requirements.txt  tokens.yaml.example
RQ/: RQ1.ipynb  RQ2.ipynb  RQ3.ipynb
crustasystem/: .gitignore  Cargo.toml
crustasystem-frontend/: index.html
crustasystem/src/: db.rs  main.rs
crustasystem/src/handlers/: health.rs  mod.rs  packages.rs  severity_levels.rs  statistics.rs  vulnerabilities.rs  vulnerability_types.rs
crustasystem/src/models/: affected_versions.rs  diff_lines.rs  file_changes.rs  fix_commits.rs  functions.rs  mod.rs  packages.rs  severity_levels.rs  unsafe_blocks.rs  vulnerabilities.rs  vulnerability_ids.rs  vulnerability_references.rs  vulnerability_statistics.rs  vulnerability_types.rs
crustasystem/tests/: models_test.rs
data_collection/: collect_vuls.ipynb
data_extraction/: .gitignore  collect_commits.ipynb  extract_changes.py  git_data_extractor.py
planning/: database_schema.md
source_analysis/scripts/: compile.py  compile_single.sh  del_dirs_wout_files.sh  fail  format_result.py  locate.py  regex.py  success  worktree.sh
source_analysis/unsafeAnalysis/: README.md
source_analysis/unsafeAnalysis/src/: lib.rs  main.rs  utils.rs
source_analysis/unsafeAnalysis/src/blocks/: mod.rs
source_analysis/unsafeAnalysis/src/items/: mod.rs
utils/: consts.py  utils.py
